--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,18 +5,19 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "altair",
     "dotenv",
     "huggingface-hub[hf-xet]>=0.35.3",
     "ipykernel>=6.30.1",
     "pandas>=2.3.3",
     "polars>=1.34.0",
-    "torch>=2.8.0",
     "transformer-lens>=2.16.1",
     "transformers>=4.57.0",
     "v>=1",
     "sae-lens",
-
+    "torch",
+    "torchvision",
+    "torchaudio",
+    "altair>=5.5.0",
 ]
 
 [tool.uv.sources]
