--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "torchaudio",
     "altair>=5.5.0",
     "altair-viewer>=0.4.0",
+    "datasets>=4.1.1",
 ]
 
 [tool.uv.sources]
